Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
     "kindof_neighbors\n",
     "kindof_neighbors.pop ()\n",
     "kindof_neighbors\n",
-    "kindof_neighbors.pop ()"
+    "kindof_neighbors.pop ()\n"
    ]
   },
   {
