Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -262,7 +262,9 @@
    ],
    "source": [
     "kindof_neighbors.append('malta')\n",
-    "kindof_neighbr"
+    "kindof_neighbors\n",
+    "kindof_neighbors.pop ()\n",
+    "kindof_neighbors"
    ]
   },
   {
