Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin # add code here"
+    "kindof_neighbors.append() # add code here"
    ]
   },
   {
