--- a/index.ipynb
+++ b/index.ipynb
@@ -273,11 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors.append() # add code here"
+    "kindof_neighbors.append('Thailand') # add code here"
    ]
   },
   {
