--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "cou\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', \n",
     "# 'Argentina', 'Italy',  'Canada', 'South Korea',  'Malta',  'Thailand']"
    ]
