Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -277,8 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors.append('Thailand') # add code here\n",
-    "kin"
+    "kindof_neighbors.append('Thailand') # add code here"
    ]
   },
   {
