Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,12 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'Thailand', 'Thailand']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kindof_neighbors.append('Thailand') # add code here\n",
-    "kin"
+    "kindof_neighbors"
    ]
   },
   {
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -312,7 +323,7 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
