Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,23 +245,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'malta']"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'malta']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kindof_neighbors.append('malta')\n",
-    "kindof_neighbors"
+    "countries.append('malta')\n",
+    "countries"
    ]
   },
   {
