Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -345,10 +345,12 @@
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
-       " 'South Korea']"
+       " 'South Korea',\n",
+       " 'malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
