--- a/index.ipynb
+++ b/index.ipynb
@@ -374,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries[6] # add code here"
    ]
   },
   {
