Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -494,8 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)\n",
-    "uni"
+    "unique_countries = set(countries)"
    ]
   },
   {
