--- a/index.ipynb
+++ b/index.ipynb
@@ -490,32 +490,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Morocco',\n",
-       " 'South Korea',\n",
-       " 'USA'}"
+       "set"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique_countries"
+    "type(unique_countries)"
    ]
   },
   {
