--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,7 @@
    ],
    "source": [
     "unique_countries = set(countries)\n",
-    "type(unique_countries)"
+    "unique_countries"
    ]
   },
   {
