--- a/index.ipynb
+++ b/index.ipynb
@@ -490,23 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "set"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique_countries"
+    "unique_countries = list(unique_countries)\n",
+    "type "
    ]
   },
   {
