--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -490,24 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
     "unique_countries = list(unique_countries)\n",
-    "type(unique_countries)"
+    "type "
    ]
   },
   {
