Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -553,6 +553,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(uniquec)\n",
+    "\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
