--- a/index.ipynb
+++ b/index.ipynb
@@ -549,12 +549,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(uniquec)\n",
-    "\n",
+    "len(unique_countries)\n",
+    "len(countries)\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
