Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -549,14 +549,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(unique_countries)\n",
-    "len(countries)\n",
-    "num_of_repeats = None\n",
-    "num_of_repeats # 3"
+    "len(unique_countries)"
    ]
   },
   {
