Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -564,8 +564,7 @@
     }
    ],
    "source": [
-    "len(unique_countries)\n",
-    "len(countries)\n"
+    "len(unique_countries)\n"
    ]
   },
   {
