Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -549,22 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to operator (<ipython-input-42-69946725f80a>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-69946725f80a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    len(unique_countries)- len(countries) = 'num_of_repeats'\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
+     ]
     }
    ],
    "source": [
-    "len(unique_countries)- len(countries) =\n"
+    "len(unique_countries) - len(countries) = 'num_of_repeats'\n"
    ]
   },
   {
