Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -549,20 +549,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to operator (<ipython-input-43-31c7a4ca0e1f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-31c7a4ca0e1f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    len(unique_countries) - len(countries) = 'num_of_repeats'\u001b[0m\n\u001b[0m                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(unique_countries) - len(countries) = 'num_of_repeats'\n"
+    "len(unique_countries)\n",
+    "len(countries)\n",
+    "num_of_repeats = 3\n",
+    "num_of_repeats # 3"
    ]
   },
   {
